added a bit to writeup

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
   Our primary deliverable is an interactive demo/simulation allowing a user to drag and create obstacles while observing how those obstacles affect the 
   flow of fluid. Our main implementation goals are listed below:
   <ul>
-    <li>A 2D grid of fluid with ability to switch between visualizations of fluid attributes, which shows how fluid moves around/is affected by obstacles</li>
-    <li>The ability to change the direction of the stream/add multiple streams</li>
-    <li>The ability to create/delete new obstacles.</li>
+    <li>A 2D grid of fluid with the ability to switch between visualizations of fluid attributes, which shows how fluid moves around/is affected by obstacles.</li>
+    <li>The ability for the user to interactively create/move/delete obstacles.</li>
   </ul>
+  We want our final product to be able to accurately model fluid behaviors and their interactions with objects in a realistic manner. We aim to be able to 
+  replicate existing real life phenomena that affect fluid behaviors using our simulation. 
 </p>
 <br>
 <p align="middle"><b>Aspirational Plan</b></p>
