Finish resources section

--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
 <p align="middle"><a href="https://physics.weber.edu/schroeder/fluids/">Weber State University Fluid Dynamics Simulation</a></p>
 <p align="middle"><a href="https://eprints.soton.ac.uk/349797/1/v20.pdf">Boundary Data Immersion Method for Cartesian-Grid
   Simulations of Fluid-Body Interaction Problems</a></p>
-<!-- <p>
-  
-</p> -->
+<p align="middle"><a href="https://github.com/weymouth/lily-pad">LilyPad</a></p>
+<br>
+<p align="middle">
+  Currently we are planning on using a combination of JavaScript and WebGL to implement our interactive simulator.
+</p>
 <br>
 
 </body>
