--- a/fluid_collision_sim/index.html
+++ b/fluid_collision_sim/index.html
@@ -22,15 +22,62 @@
   <body>
     <script id="configVelocityFrag" type="shader-code">
       precision mediump float;
-
-      // uniform vec2 gridRes;
+      uniform float mode;
+      uniform vec2 gridRes;
       // uniform sampler2D dataTex;
 
       // uniform float initialVal;
 
       void main() {
-        // vec2 pixel  = gl_FragCoord.xy / gridRes.xy
-        gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+        vec2 uv = gl_FragCoord.xy / gridRes.xy;
+
+        //gl_FragColor = vec4(gl_FragCoord.x / 1024.0, 0.0, 0.0, 1.0);
+        //gl_FragColor = vec4(uv.xy, 0.0, 1.0);
+        gl_FragColor = vec4(mode, 1.0 - mode, 0.0, 1.0);
+
+        //float gradient = gl_FragCoord.x / gridRes.x;
+        //gl_FragColor = vec4(gradient, 0.0, 1.0 - gradient, 1.0);
+      }
+    </script>
+    <script id="advectFrag" type="shader-code">
+      precision mediump float;
+
+      uniform sampler2D velocity;
+      uniform sampler2D advected;
+
+      uniform vec2 gridSize;
+      uniform float gridScale;
+
+      uniform float timestep;
+
+      vec2 bilerp(sampler2D d, vec2 p)
+      {
+          vec4 ij; // i0, j0, i1, j1
+          ij.xy = floor(p - 0.5) + 0.5;
+          ij.zw = ij.xy + 1.0;
+
+          vec4 uv = ij / gridSize.xyxy;
+          vec2 d11 = texture2D(d, uv.xy).xy;
+          vec2 d21 = texture2D(d, uv.zy).xy;
+          vec2 d12 = texture2D(d, uv.xw).xy;
+          vec2 d22 = texture2D(d, uv.zw).xy;
+
+          vec2 a = p - ij.xy;
+
+          return mix(mix(d11, d21, a.x), mix(d12, d22, a.x), a.y);
+      }
+
+      void main()
+      {
+          vec2 uv = gl_FragCoord.xy / gridSize.xy;
+          float scale = 1.0 / gridScale;
+
+          // trace point back in time
+          vec2 p = gl_FragCoord.xy - timestep * scale * texture2D(velocity, uv).xy;
+
+          gl_FragColor = vec4(bilerp(advected, p), 0.5, 1.0);
+          //gl_FragColor = vec4((texture2D(advected, uv).xy + p.xy).xy, 0.5, 1.0);
+          //gl_FragColor = vec4(texture2D(advected, uv).xy, 0.5, 1.0);
       }
     </script>
     <script id="finalRenderFrag" type="shader-code">
