added milestone video and linked it in website

--- a/milestone_report/index.html
+++ b/milestone_report/index.html
@@ -44,6 +44,16 @@
     </table>
 </div>
 <br><br>
+<h2 align="middle">Summary</h2>
+<div>
+  <center>
+  <video width="768" height="432" controls>
+    <source src="videos/milestonevideo.mov" type="video/mp4">
+  </video>
+  </center>
+</div>
+<br>
+</br>
 
 <h2 align="middle">Current Progress</h2>
 <p>
