--- a/fluid_collision_sim/index.html
+++ b/fluid_collision_sim/index.html
@@ -132,6 +132,7 @@
 
       uniform vec2 gridRes;
       uniform float dt;
+      uniform float renderSteps;
       uniform sampler2D initialPositions;
       uniform sampler2D particlePositions;
       uniform sampler2D particleAgeState;
@@ -142,10 +143,13 @@
       void main() {
         vec2 pos = texture2D(particlePositions, vUv).xy;
         vec2 age = texture2D(particleAgeState, vUv).xy;
-        vec2 velocity = texture2D(velocityField, pos * gridRes).xy;
 
-        pos.x += 2.0 * velocity.x/gridRes.x * dt;
-        pos.y += 2.0 * velocity.y/gridRes.y * dt;
+        // Use pos to index into velocity texture. Positions are randomly generated between -1 and 1. Need to
+        // manipulate pos so its x and y values are between 0 and 1.
+        vec2 velocity = texture2D(velocityField, (pos + 1.0)/ 2.0 ).xy;
+
+        pos.x += (2.0 * velocity.x/gridRes.x * dt)/renderSteps;
+        pos.y += (2.0 * velocity.y/gridRes.y * dt)/renderSteps;
 
         float maxAge = age.y;
         float shouldReset = mod(age.x, maxAge);
@@ -168,7 +172,7 @@
 
         gl_Position = projectionMatrix * modelViewMatrix * vec4( pos, 0.0, 1.0 );
 
-        gl_PointSize = 0.6;
+        gl_PointSize = 1.0;
       }
     </script>
     <script id="particleRenderFrag" type="shader-code">
